apps/subsystems/ai/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ai
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
